--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -239,3 +239,130 @@ p {
   margin-left: 20px;
   margin-bottom: 10px;
 }
+
+.new-project-form {
+  margin: 20px;
+  padding: 20px;
+  background-color: #f2f2f2;
+  text-align: left;
+  font-weight: bold;
+  position: relative;
+}
+
+.new-project-form h2 {
+  text-align: center;
+}
+
+.new-project-input {
+  display: block;
+  width: 80%;
+  margin: 0 auto;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid var(--primary-color);
+  border-radius: 4px;
+  text-align: center;
+}
+
+.new-project-textarea {
+  display: block;
+  width: 80%;
+  margin: 0 auto;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid var(--primary-color);
+  border-radius: 4px;
+  text-align: center;
+}
+
+.new-project-button {
+  background-color: var(--tertiary-color);
+  color: white;
+  padding: 12px 24px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.new-project-button:hover {
+  background-color: var(--tertiary-color-2);
+}
+
+.projects-container {
+  background-color: #f2f2f2;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.projects-heading {
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.projects-list {
+  list-style: none;
+  padding: 0;
+}
+
+.project-item {
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.project-title {
+  font-size: 20px;
+  color: #555;
+  margin-bottom: 5px;
+}
+
+.project-description {
+  font-size: 16px;
+  color: #777;
+  margin-bottom: 10px;
+}
+
+.task-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.task-input {
+  flex: 1;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.task-button {
+  background-color: #1c61aa;
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.task-button:hover {
+  background-color: var(--quaternary-color);
+}
+
+.add-task-button {
+  background-color: var(--tertiary-color-2);
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.add-task-button:hover {
+  background-color: var(--tertiary-color);
+}
