--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -91,8 +91,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-  max-width: 700px;
+  width: 700px;
   background-color: #f1f1f1;
   padding: 10px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -111,17 +110,6 @@ nav a:hover {
   background-color: #B7E5DD;
 }
 
-@media (max-width: 600px) {
-  nav {
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 10px 20px;
-  }
-
-  nav a {
-    padding: 8px 0;
-  }
-}
 
 .app {
   flex: 1;
